# haskell-tautology-checker

./: LICENSE  README.md  haskell-tautology-checker.cabal  hie.yaml
