name:                haskell-tautology-checker
version:             0.1.0.0
synopsis:            Simple logic tautology checker.
description:         Checks if a logical expression is a tautology(always true).
homepage:            https://github.com/Tomcat-42/haskell-tautology-checker#readme
license:             WTFPL
license-file:        LICENSE
author:              Pablo Alessandro Santos Hugen
maintainer:          PabloASHugen@protonmail.com
copyright:           2021 Pablo Alessandro Santos Hugen
category:            cli
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-tautology-checker
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
